Trab04/y.output
   0  $accept : program $end

   1  $$1 :

   2  program : $$1 declList

   3  $$2 :

   4  declList : typeVar IDENT $$2 declarations

   5  $$3 :

   6  declList : VOID IDENT $$3 methodDecl
   7           |

   8  $$4 :

   9  declarations : ';' $$4 declList

  10  $$5 :

  11  declarations : ',' $$5 listNameDecls ';' declList
  12               | methodDecl

  13  $$6 :

  14  methodDecl : '(' $$6 argsList ')' '{' statementList '}' declList

  15  $$7 :

  16  listNameDecls : IDENT $$7 nameDecls

  17  nameDecls : ',' listNameDecls
  18            |

  19  argsList : argRule argsListComma
  20           |

  21  argRule : typeVar IDENT

  22  argsListComma : ',' argRule argsListComma
  23                |

  24  statementList : statementList statement
  25                |

  26  statement : '{' statementList '}'
  27            | scopeFunVarDecls ';'
  28            | attribWithExpr ';'

  29  $$8 :

  30  statement : RETURN expression $$8 ';'

  31  $$9 :

  32  $$10 :

  33  statement : FOR '(' $$9 scopeForVarDecls ';' expressionForDecls ';' counterForDecls ')' $$10 statement

  34  $$11 :

  35  $$12 :

  36  $$13 :

  37  statement : WHILE $$11 '(' expression $$12 ')' $$13 statement

  38  $$14 :

  39  $$15 :

  40  $$16 :

  41  statement : DO $$14 $$15 statement WHILE '(' expression $$16 ')'
  42            | ifStatement

  43  $$17 :

  44  statement : BREAK $$17 ';'

  45  $$18 :

  46  statement : CONTINUE $$18 ';'

  47  $$19 :

  48  statement : SWITCH $$19 '(' expression ')' '{' listSwitchCase '}'

  49  ifStatement : ifStatementWithoutElse
  50              | ifStatementWithoutElse ELSE statement

  51  $$20 :

  52  ifStatementWithoutElse : IF '(' expression $$20 ')' statement

  53  $$21 :

  54  scopeForVarDecls : typeVar $$21 attribScopeForVars
  55                   |

  56  $$22 :

  57  attribScopeForVars : IDENT ATTRIB expression $$22 extendScopeForVars

  58  extendScopeForVars : ',' attribScopeForVars
  59                     |

  60  attribWithExpr : IDENT ATTRIB expression

  61  listSwitchCase : CASE validCaseSwitch statementSwitchCase
  62                 | DEFAULT statementSwitchCase
  63                 |

  64  validCaseSwitch : IDENT
  65                  | NUM
  66                  | TRUE
  67                  | FALSE

  68  statementSwitchCase : ':' statement listSwitchCase

  69  $$23 :

  70  scopeFunVarDecls : typeVar $$23 listScopeFunVar

  71  listScopeFunVar : attribWithExpr extendListScopeFunVar

  72  extendListScopeFunVar : ',' listScopeFunVar
  73                        |

  74  expressionForDecls : expression
  75                     |

  76  counterForDecls : IDENT operatorIncr listCounterForDecls
  77                  |

  78  listCounterForDecls : ',' counterForDecls
  79                      |

  80  operatorIncr : INCREMENT
  81               | DECREMENT

  82  expressionWithFun : IDENT '(' argsSourceList ')'

  83  argsSourceList : expression expressionList

  84  expressionList : ',' argsSourceList
  85                 |

  86  expression : expression '+' expression
  87             | expression '-' expression
  88             | expression '*' expression
  89             | expression DIV expression
  90             | expression MOD expression
  91             | expression OR expression
  92             | expression AND expression
  93             | expression '<' expression
  94             | expression LEQ expression
  95             | expression EQ expression
  96             | expression GEQ expression
  97             | expression '>' expression
  98             | expression NEQ expression
  99             | NOT expression
 100             | '(' expression ')'
 101             | expressionWithFun
 102             | validCaseSwitch

 103  typeVar : DOUBLE
 104          | BOOL
 105          | INT
 106          | STRING
 107          | IDENT

state 0
	$accept : . program $end  (0)
	$$1 : .  (1)

	.  reduce 1

	program  goto 1
	$$1  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : $$1 . declList  (2)
	declList : .  (7)

	IDENT  shift 3
	INT  shift 4
	BOOL  shift 5
	VOID  shift 6
	DOUBLE  shift 7
	STRING  shift 8
	$end  reduce 7

	typeVar  goto 9
	declList  goto 10


state 3
	typeVar : IDENT .  (107)

	.  reduce 107


state 4
	typeVar : INT .  (105)

	.  reduce 105


state 5
	typeVar : BOOL .  (104)

	.  reduce 104


state 6
	declList : VOID . IDENT $$3 methodDecl  (6)

	IDENT  shift 11
	.  error


state 7
	typeVar : DOUBLE .  (103)

	.  reduce 103


state 8
	typeVar : STRING .  (106)

	.  reduce 106


state 9
	declList : typeVar . IDENT $$2 declarations  (4)

	IDENT  shift 12
	.  error


state 10
	program : $$1 declList .  (2)

	.  reduce 2


state 11
	declList : VOID IDENT . $$3 methodDecl  (6)
	$$3 : .  (5)

	.  reduce 5

	$$3  goto 13


state 12
	declList : typeVar IDENT . $$2 declarations  (4)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 14


state 13
	declList : VOID IDENT $$3 . methodDecl  (6)

	'('  shift 15
	.  error

	methodDecl  goto 16


state 14
	declList : typeVar IDENT $$2 . declarations  (4)

	'('  shift 15
	';'  shift 17
	','  shift 18
	.  error

	declarations  goto 19
	methodDecl  goto 20


state 15
	methodDecl : '(' . $$6 argsList ')' '{' statementList '}' declList  (14)
	$$6 : .  (13)

	.  reduce 13

	$$6  goto 21


state 16
	declList : VOID IDENT $$3 methodDecl .  (6)

	.  reduce 6


state 17
	declarations : ';' . $$4 declList  (9)
	$$4 : .  (8)

	.  reduce 8

	$$4  goto 22


state 18
	declarations : ',' . $$5 listNameDecls ';' declList  (11)
	$$5 : .  (10)

	.  reduce 10

	$$5  goto 23


state 19
	declList : typeVar IDENT $$2 declarations .  (4)

	.  reduce 4


state 20
	declarations : methodDecl .  (12)

	.  reduce 12


state 21
	methodDecl : '(' $$6 . argsList ')' '{' statementList '}' declList  (14)
	argsList : .  (20)

	IDENT  shift 3
	INT  shift 4
	BOOL  shift 5
	DOUBLE  shift 7
	STRING  shift 8
	')'  reduce 20

	typeVar  goto 24
	argsList  goto 25
	argRule  goto 26


state 22
	declarations : ';' $$4 . declList  (9)
	declList : .  (7)

	IDENT  shift 3
	INT  shift 4
	BOOL  shift 5
	VOID  shift 6
	DOUBLE  shift 7
	STRING  shift 8
	$end  reduce 7

	typeVar  goto 9
	declList  goto 27


state 23
	declarations : ',' $$5 . listNameDecls ';' declList  (11)

	IDENT  shift 28
	.  error

	listNameDecls  goto 29


state 24
	argRule : typeVar . IDENT  (21)

	IDENT  shift 30
	.  error


state 25
	methodDecl : '(' $$6 argsList . ')' '{' statementList '}' declList  (14)

	')'  shift 31
	.  error


state 26
	argsList : argRule . argsListComma  (19)
	argsListComma : .  (23)

	','  shift 32
	')'  reduce 23

	argsListComma  goto 33


state 27
	declarations : ';' $$4 declList .  (9)

	.  reduce 9


state 28
	listNameDecls : IDENT . $$7 nameDecls  (16)
	$$7 : .  (15)

	.  reduce 15

	$$7  goto 34


state 29
	declarations : ',' $$5 listNameDecls . ';' declList  (11)

	';'  shift 35
	.  error


state 30
	argRule : typeVar IDENT .  (21)

	.  reduce 21


state 31
	methodDecl : '(' $$6 argsList ')' . '{' statementList '}' declList  (14)

	'{'  shift 36
	.  error


state 32
	argsListComma : ',' . argRule argsListComma  (22)

	IDENT  shift 3
	INT  shift 4
	BOOL  shift 5
	DOUBLE  shift 7
	STRING  shift 8
	.  error

	typeVar  goto 24
	argRule  goto 37


state 33
	argsList : argRule argsListComma .  (19)

	.  reduce 19


state 34
	listNameDecls : IDENT $$7 . nameDecls  (16)
	nameDecls : .  (18)

	','  shift 38
	';'  reduce 18

	nameDecls  goto 39


state 35
	declarations : ',' $$5 listNameDecls ';' . declList  (11)
	declList : .  (7)

	IDENT  shift 3
	INT  shift 4
	BOOL  shift 5
	VOID  shift 6
	DOUBLE  shift 7
	STRING  shift 8
	$end  reduce 7

	typeVar  goto 9
	declList  goto 40


state 36
	methodDecl : '(' $$6 argsList ')' '{' . statementList '}' declList  (14)
	statementList : .  (25)

	.  reduce 25

	statementList  goto 41


state 37
	argsListComma : ',' argRule . argsListComma  (22)
	argsListComma : .  (23)

	','  shift 32
	')'  reduce 23

	argsListComma  goto 42


state 38
	nameDecls : ',' . listNameDecls  (17)

	IDENT  shift 28
	.  error

	listNameDecls  goto 43


state 39
	listNameDecls : IDENT $$7 nameDecls .  (16)

	.  reduce 16


state 40
	declarations : ',' $$5 listNameDecls ';' declList .  (11)

	.  reduce 11


state 41
	methodDecl : '(' $$6 argsList ')' '{' statementList . '}' declList  (14)
	statementList : statementList . statement  (24)

	IDENT  shift 44
	INT  shift 4
	BOOL  shift 5
	DOUBLE  shift 7
	STRING  shift 8
	SWITCH  shift 45
	WHILE  shift 46
	DO  shift 47
	FOR  shift 48
	IF  shift 49
	RETURN  shift 50
	BREAK  shift 51
	CONTINUE  shift 52
	'{'  shift 53
	'}'  shift 54
	.  error

	typeVar  goto 55
	statement  goto 56
	scopeFunVarDecls  goto 57
	attribWithExpr  goto 58
	ifStatement  goto 59
	ifStatementWithoutElse  goto 60


state 42
	argsListComma : ',' argRule argsListComma .  (22)

	.  reduce 22


state 43
	nameDecls : ',' listNameDecls .  (17)

	.  reduce 17


state 44
	attribWithExpr : IDENT . ATTRIB expression  (60)
	typeVar : IDENT .  (107)

	ATTRIB  shift 61
	IDENT  reduce 107


state 45
	statement : SWITCH . $$19 '(' expression ')' '{' listSwitchCase '}'  (48)
	$$19 : .  (47)

	.  reduce 47

	$$19  goto 62


state 46
	statement : WHILE . $$11 '(' expression $$12 ')' $$13 statement  (37)
	$$11 : .  (34)

	.  reduce 34

	$$11  goto 63


state 47
	statement : DO . $$14 $$15 statement WHILE '(' expression $$16 ')'  (41)
	$$14 : .  (38)

	.  reduce 38

	$$14  goto 64


state 48
	statement : FOR . '(' $$9 scopeForVarDecls ';' expressionForDecls ';' counterForDecls ')' $$10 statement  (33)

	'('  shift 65
	.  error


state 49
	ifStatementWithoutElse : IF . '(' expression $$20 ')' statement  (52)

	'('  shift 66
	.  error


state 50
	statement : RETURN . expression $$8 ';'  (30)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 73
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 51
	statement : BREAK . $$17 ';'  (44)
	$$17 : .  (43)

	.  reduce 43

	$$17  goto 76


state 52
	statement : CONTINUE . $$18 ';'  (46)
	$$18 : .  (45)

	.  reduce 45

	$$18  goto 77


state 53
	statement : '{' . statementList '}'  (26)
	statementList : .  (25)

	.  reduce 25

	statementList  goto 78


state 54
	methodDecl : '(' $$6 argsList ')' '{' statementList '}' . declList  (14)
	declList : .  (7)

	IDENT  shift 3
	INT  shift 4
	BOOL  shift 5
	VOID  shift 6
	DOUBLE  shift 7
	STRING  shift 8
	$end  reduce 7

	typeVar  goto 9
	declList  goto 79


state 55
	scopeFunVarDecls : typeVar . $$23 listScopeFunVar  (70)
	$$23 : .  (69)

	.  reduce 69

	$$23  goto 80


state 56
	statementList : statementList statement .  (24)

	.  reduce 24


state 57
	statement : scopeFunVarDecls . ';'  (27)

	';'  shift 81
	.  error


state 58
	statement : attribWithExpr . ';'  (28)

	';'  shift 82
	.  error


state 59
	statement : ifStatement .  (42)

	.  reduce 42


60: shift/reduce conflict (shift 83, reduce 49) on ELSE
state 60
	ifStatement : ifStatementWithoutElse .  (49)
	ifStatement : ifStatementWithoutElse . ELSE statement  (50)

	ELSE  shift 83
	IDENT  reduce 49
	INT  reduce 49
	BOOL  reduce 49
	DOUBLE  reduce 49
	STRING  reduce 49
	SWITCH  reduce 49
	CASE  reduce 49
	DEFAULT  reduce 49
	WHILE  reduce 49
	DO  reduce 49
	FOR  reduce 49
	IF  reduce 49
	RETURN  reduce 49
	BREAK  reduce 49
	CONTINUE  reduce 49
	'{'  reduce 49
	'}'  reduce 49


state 61
	attribWithExpr : IDENT ATTRIB . expression  (60)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 84
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 62
	statement : SWITCH $$19 . '(' expression ')' '{' listSwitchCase '}'  (48)

	'('  shift 85
	.  error


state 63
	statement : WHILE $$11 . '(' expression $$12 ')' $$13 statement  (37)

	'('  shift 86
	.  error


state 64
	statement : DO $$14 . $$15 statement WHILE '(' expression $$16 ')'  (41)
	$$15 : .  (39)

	.  reduce 39

	$$15  goto 87


state 65
	statement : FOR '(' . $$9 scopeForVarDecls ';' expressionForDecls ';' counterForDecls ')' $$10 statement  (33)
	$$9 : .  (31)

	.  reduce 31

	$$9  goto 88


state 66
	ifStatementWithoutElse : IF '(' . expression $$20 ')' statement  (52)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 89
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 67
	validCaseSwitch : NUM .  (65)

	.  reduce 65


state 68
	validCaseSwitch : IDENT .  (64)
	expressionWithFun : IDENT . '(' argsSourceList ')'  (82)

	'('  shift 90
	AND  reduce 64
	OR  reduce 64
	DIV  reduce 64
	MOD  reduce 64
	EQ  reduce 64
	NEQ  reduce 64
	LEQ  reduce 64
	GEQ  reduce 64
	'<'  reduce 64
	'>'  reduce 64
	'*'  reduce 64
	'+'  reduce 64
	'-'  reduce 64
	';'  reduce 64
	','  reduce 64
	')'  reduce 64


state 69
	validCaseSwitch : TRUE .  (66)

	.  reduce 66


state 70
	validCaseSwitch : FALSE .  (67)

	.  reduce 67


state 71
	expression : NOT . expression  (99)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 91
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 72
	expression : '(' . expression ')'  (100)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 92
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 73
	statement : RETURN expression . $$8 ';'  (30)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . DIV expression  (89)
	expression : expression . MOD expression  (90)
	expression : expression . OR expression  (91)
	expression : expression . AND expression  (92)
	expression : expression . '<' expression  (93)
	expression : expression . LEQ expression  (94)
	expression : expression . EQ expression  (95)
	expression : expression . GEQ expression  (96)
	expression : expression . '>' expression  (97)
	expression : expression . NEQ expression  (98)
	$$8 : .  (29)

	AND  shift 93
	OR  shift 94
	DIV  shift 95
	MOD  shift 96
	EQ  shift 97
	NEQ  shift 98
	LEQ  shift 99
	GEQ  shift 100
	'<'  shift 101
	'>'  shift 102
	'*'  shift 103
	'+'  shift 104
	'-'  shift 105
	';'  reduce 29

	$$8  goto 106


state 74
	expression : validCaseSwitch .  (102)

	.  reduce 102


state 75
	expression : expressionWithFun .  (101)

	.  reduce 101


state 76
	statement : BREAK $$17 . ';'  (44)

	';'  shift 107
	.  error


state 77
	statement : CONTINUE $$18 . ';'  (46)

	';'  shift 108
	.  error


state 78
	statementList : statementList . statement  (24)
	statement : '{' statementList . '}'  (26)

	IDENT  shift 44
	INT  shift 4
	BOOL  shift 5
	DOUBLE  shift 7
	STRING  shift 8
	SWITCH  shift 45
	WHILE  shift 46
	DO  shift 47
	FOR  shift 48
	IF  shift 49
	RETURN  shift 50
	BREAK  shift 51
	CONTINUE  shift 52
	'{'  shift 53
	'}'  shift 109
	.  error

	typeVar  goto 55
	statement  goto 56
	scopeFunVarDecls  goto 57
	attribWithExpr  goto 58
	ifStatement  goto 59
	ifStatementWithoutElse  goto 60


state 79
	methodDecl : '(' $$6 argsList ')' '{' statementList '}' declList .  (14)

	.  reduce 14


state 80
	scopeFunVarDecls : typeVar $$23 . listScopeFunVar  (70)

	IDENT  shift 110
	.  error

	attribWithExpr  goto 111
	listScopeFunVar  goto 112


state 81
	statement : scopeFunVarDecls ';' .  (27)

	.  reduce 27


state 82
	statement : attribWithExpr ';' .  (28)

	.  reduce 28


state 83
	ifStatement : ifStatementWithoutElse ELSE . statement  (50)

	IDENT  shift 44
	INT  shift 4
	BOOL  shift 5
	DOUBLE  shift 7
	STRING  shift 8
	SWITCH  shift 45
	WHILE  shift 46
	DO  shift 47
	FOR  shift 48
	IF  shift 49
	RETURN  shift 50
	BREAK  shift 51
	CONTINUE  shift 52
	'{'  shift 53
	.  error

	typeVar  goto 55
	statement  goto 113
	scopeFunVarDecls  goto 57
	attribWithExpr  goto 58
	ifStatement  goto 59
	ifStatementWithoutElse  goto 60


state 84
	attribWithExpr : IDENT ATTRIB expression .  (60)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . DIV expression  (89)
	expression : expression . MOD expression  (90)
	expression : expression . OR expression  (91)
	expression : expression . AND expression  (92)
	expression : expression . '<' expression  (93)
	expression : expression . LEQ expression  (94)
	expression : expression . EQ expression  (95)
	expression : expression . GEQ expression  (96)
	expression : expression . '>' expression  (97)
	expression : expression . NEQ expression  (98)

	AND  shift 93
	OR  shift 94
	DIV  shift 95
	MOD  shift 96
	EQ  shift 97
	NEQ  shift 98
	LEQ  shift 99
	GEQ  shift 100
	'<'  shift 101
	'>'  shift 102
	'*'  shift 103
	'+'  shift 104
	'-'  shift 105
	';'  reduce 60
	','  reduce 60


state 85
	statement : SWITCH $$19 '(' . expression ')' '{' listSwitchCase '}'  (48)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 114
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 86
	statement : WHILE $$11 '(' . expression $$12 ')' $$13 statement  (37)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 115
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 87
	statement : DO $$14 $$15 . statement WHILE '(' expression $$16 ')'  (41)

	IDENT  shift 44
	INT  shift 4
	BOOL  shift 5
	DOUBLE  shift 7
	STRING  shift 8
	SWITCH  shift 45
	WHILE  shift 46
	DO  shift 47
	FOR  shift 48
	IF  shift 49
	RETURN  shift 50
	BREAK  shift 51
	CONTINUE  shift 52
	'{'  shift 53
	.  error

	typeVar  goto 55
	statement  goto 116
	scopeFunVarDecls  goto 57
	attribWithExpr  goto 58
	ifStatement  goto 59
	ifStatementWithoutElse  goto 60


state 88
	statement : FOR '(' $$9 . scopeForVarDecls ';' expressionForDecls ';' counterForDecls ')' $$10 statement  (33)
	scopeForVarDecls : .  (55)

	IDENT  shift 3
	INT  shift 4
	BOOL  shift 5
	DOUBLE  shift 7
	STRING  shift 8
	';'  reduce 55

	typeVar  goto 117
	scopeForVarDecls  goto 118


state 89
	ifStatementWithoutElse : IF '(' expression . $$20 ')' statement  (52)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . DIV expression  (89)
	expression : expression . MOD expression  (90)
	expression : expression . OR expression  (91)
	expression : expression . AND expression  (92)
	expression : expression . '<' expression  (93)
	expression : expression . LEQ expression  (94)
	expression : expression . EQ expression  (95)
	expression : expression . GEQ expression  (96)
	expression : expression . '>' expression  (97)
	expression : expression . NEQ expression  (98)
	$$20 : .  (51)

	AND  shift 93
	OR  shift 94
	DIV  shift 95
	MOD  shift 96
	EQ  shift 97
	NEQ  shift 98
	LEQ  shift 99
	GEQ  shift 100
	'<'  shift 101
	'>'  shift 102
	'*'  shift 103
	'+'  shift 104
	'-'  shift 105
	')'  reduce 51

	$$20  goto 119


state 90
	expressionWithFun : IDENT '(' . argsSourceList ')'  (82)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 120
	validCaseSwitch  goto 74
	expressionWithFun  goto 75
	argsSourceList  goto 121


state 91
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . DIV expression  (89)
	expression : expression . MOD expression  (90)
	expression : expression . OR expression  (91)
	expression : expression . AND expression  (92)
	expression : expression . '<' expression  (93)
	expression : expression . LEQ expression  (94)
	expression : expression . EQ expression  (95)
	expression : expression . GEQ expression  (96)
	expression : expression . '>' expression  (97)
	expression : expression . NEQ expression  (98)
	expression : NOT expression .  (99)

	AND  shift 93
	OR  shift 94
	DIV  shift 95
	MOD  shift 96
	EQ  shift 97
	NEQ  shift 98
	LEQ  shift 99
	GEQ  shift 100
	'<'  shift 101
	'>'  shift 102
	'*'  shift 103
	'+'  shift 104
	'-'  shift 105
	';'  reduce 99
	','  reduce 99
	')'  reduce 99


state 92
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . DIV expression  (89)
	expression : expression . MOD expression  (90)
	expression : expression . OR expression  (91)
	expression : expression . AND expression  (92)
	expression : expression . '<' expression  (93)
	expression : expression . LEQ expression  (94)
	expression : expression . EQ expression  (95)
	expression : expression . GEQ expression  (96)
	expression : expression . '>' expression  (97)
	expression : expression . NEQ expression  (98)
	expression : '(' expression . ')'  (100)

	AND  shift 93
	OR  shift 94
	DIV  shift 95
	MOD  shift 96
	EQ  shift 97
	NEQ  shift 98
	LEQ  shift 99
	GEQ  shift 100
	'<'  shift 101
	'>'  shift 102
	'*'  shift 103
	'+'  shift 104
	'-'  shift 105
	')'  shift 122
	.  error


state 93
	expression : expression AND . expression  (92)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 123
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 94
	expression : expression OR . expression  (91)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 124
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 95
	expression : expression DIV . expression  (89)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 125
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 96
	expression : expression MOD . expression  (90)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 126
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 97
	expression : expression EQ . expression  (95)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 127
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 98
	expression : expression NEQ . expression  (98)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 128
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 99
	expression : expression LEQ . expression  (94)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 129
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 100
	expression : expression GEQ . expression  (96)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 130
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 101
	expression : expression '<' . expression  (93)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 131
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 102
	expression : expression '>' . expression  (97)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 132
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 103
	expression : expression '*' . expression  (88)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 133
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 104
	expression : expression '+' . expression  (86)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 134
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 105
	expression : expression '-' . expression  (87)

	NUM  shift 67
	IDENT  shift 68
	TRUE  shift 69
	FALSE  shift 70
	NOT  shift 71
	'('  shift 72
	.  error

	expression  goto 135
	validCaseSwitch  goto 74
	expressionWithFun  goto 75


state 106
	statement : RETURN expression $$8 . ';'  (30)

	';'  shift 136
	.  error


state 107
	statement : BREAK $$17 ';' .  (44)

	.  reduce 44


state 108
	statement : CONTINUE $$18 ';' .  (46)

	.  reduce 46


state 109
	statement : '{' statementList '}' .  (26)

	.  reduce 26


state 110
	attribWithExpr : IDENT . ATTRIB expression  (60)

	ATTRIB  shift 61
	.  error


state 111
	listScopeFunVar : attribWithExpr . extendListScopeFunVar  (71)
	extendListScopeFunVar : .  (73)

	','  shift 137
	';'  reduce 73

	extendListScopeFunVar  goto 138


state 112
	scopeFunVarDecls : typeVar $$23 listScopeFunVar .  (70)

	.  reduce 70


state 113
	ifStatement : ifStatementWithoutElse ELSE statement .  (50)

	.  reduce 50


state 114
	statement : SWITCH $$19 '(' expression . ')' '{' listSwitchCase '}'  (48)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . DIV expression  (89)
	expression : expression . MOD expression  (90)
	expression : expression . OR expression  (91)
	expression : expression . AND expression  (92)
	expression : expression . '<' expression  (93)
	expression : expression . LEQ expression  (94)
	expression : expression . EQ expression  (95)
	expression : expression . GEQ expression  (96)
	expression : expression . '>' expression  (97)
	expression : expression . NEQ expression  (98)

	AND  shift 93
	OR  shift 94
	DIV  shift 95
	MOD  shift 96
	EQ  shift 97
	NEQ  shift 98
	LEQ  shift 99
	GEQ  shift 100
	'<'  shift 101
	'>'  shift 102
	'*'  shift 103
	'+'  shift 104
	'-'  shift 105
	')'  shift 139
	.  error


state 115
	statement : WHILE $$11 '(' expression . $$12 ')' $$13 statement  (37)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . DIV expression  (89)
	expression : expression . MOD expression  (90)
	expression : expression . OR expression  (91)
	expression : expression . AND expression  (92)
	expression : expression . '<' expression  (93)
	expression : expression . LEQ expression  (94)
	expression : expression . EQ expression  (95)
	expression : expression . GEQ expression  (96)
	expression : expression . '>' expression  (97)
	expression : expression . NEQ expression  (98)
	$$12 : .  (35)

	AND  shift 93
	OR  shift 94
	DIV  shift 95
	MOD  shift 96
	EQ  shift 97
	NEQ  shift 98
	LEQ  shift 99
	GEQ  shift 100
	'<'  shift 101
	'>'  shift 102
	'*'  shift 103
	'+'  shift 104
	'-'  shift 105
	')'  reduce 35

	$$12  goto 140


state 116
	statement : DO $$14 $$15 statement . WHILE '(' expression $$16 ')'  (41)

	WHILE  shift 141
	.  error


state 117
	scopeForVarDecls : typeVar . $$21 attribScopeForVars  (54)
	$$21 : .  (53)

	.  reduce 53

	$$21  goto 142


state 118
	statement : FOR '(' $$9 scopeForVarDecls . ';' expressionForDecls ';' counterForDecls ')' $$10 statement  (33)

	';'  shift 143
	.  error


state 119
	ifStatementWithoutElse : IF '(' expression $$20 . ')' statement  (52)

	')'  shift 144
	.  error


state 120
	argsSourceList : expression . expressionList  (83)
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . DIV expression  (89)
	expression : expression . MOD expression  (90)
	expression : expression . OR expression  (91)
	expression : expression . AND expression  (92)
	expression : expression . '<' expression  (93)
	expression : expression . LEQ expression  (94)
	expression : expression . EQ expression  (95)
	expression : expression . GEQ expression  (96)
	expression : expression . '>' expression  (97)
	expression : expression . NEQ expression  (98)
	expressionList : .  (85)

	AND  shift 93
	OR  shift 94
	DIV  shift 95
	MOD  shift 96
	EQ  shift 97
	NEQ  shift 98
	LEQ  shift 99
	GEQ  shift 100
	'<'  shift 101
	'>'  shift 102
	'*'  shift 103
	'+'  shift 104
	'-'  shift 105
	','  shift 145
	')'  reduce 85

	expressionList  goto 146


state 121
	expressionWithFun : IDENT '(' argsSourceList . ')'  (82)

	')'  shift 147
	.  error


state 122
	expression : '(' expression ')' .  (100)

	.  reduce 100


state 123
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . DIV expression  (89)
	expression : expression . MOD expression  (90)
	expression : expression . OR expression  (91)
	expression : expression . AND expression  (92)
	expression : expression AND expression .  (92)
	expression : expression . '<' expression  (93)
	expression : expression . LEQ expression  (94)
	expression : expression . EQ expression  (95)
	expression : expression . GEQ expression  (96)
	expression : expression . '>' expression  (97)
	expression : expression . NEQ expression  (98)

	.  reduce 92


state 124
	expression : expression . '+' expression  (86)
	expression : expression . '-' expression  (87)
	expression : expression . '*' expression  (88)
	expression : expression . DIV expression  (89)
	expression : expression . MOD expression  (90)
	expression : expression . OR expression  (91)
	expression : expression OR expression .  (91)
	expression : expression . AND expression  (92)
	expression : expression . '<' expression  (93)
	expression : expression . LEQ expression  (94)
	expression : expression . EQ expression  (95)
	expression : expression . GEQ expression  (96)
	expression : expression . '>' expression  (97)
	expression : expression . NEQ expression  (98)

	.  reduce 91

